Fixed gap issue with the marker by applying negative margin to match the gap it is taking up.

--- a/src/scss/hightouch/items.scss
+++ b/src/scss/hightouch/items.scss
@@ -114,6 +114,10 @@
         visibility: hidden;
       }
     }
+
+    .contents-footer-scroll-marker {
+      margin-block: -0.25rem;
+    }
   }
 
   .header-over-sidebar {
